# SeekByMask

./: CMakeLists.txt
Resources/: nooverlap.txt  unix_endings.txt  win_endings.txt
SeekByMask/: SeekByMask.cpp
src/: SearchManager.cpp  SeekByMask.cpp  Worker.cpp
src/include/: SearchManager.h  SearchUtils.h  Worker.h
src/seekByMaskApp/: SeekByMask.cpp
src/seekByMaskLib/: FileWrapper.cpp  ResourceGuard.cpp  SearchManager.cpp  TaskQueue.cpp  Worker.cpp
src/seekByMaskLib/include/: FileWrapper.h  ResourceGuard.h  SearchManager.h  SearchUtils.h  TaskQueue.h  Worker.h
src/seekByMaskTests/: setByMaskTests.cpp
